text gap solved

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,14 +18,14 @@ header .banner .banner-title{
     font-size: 32px;
     padding: 180px 0px 0px 0px;
     font-weight: 100;
-    line-height: 0px;
+    line-height: 1px;
 }
 header .banner .banner-greeting{
     color: #FFF;
     width: 635px;
     font-size: 72px;
     text-align: center;
-    font-style: normal;
     padding: 0px 0px 2px 350px;
     line-height: 65px;
+    margin-top: 2px;
 }
